[package]
name = "orion-sdr-view"
version = "0.0.6"
edition = "2024"
description = "Keyboard-driven SDR spectrum viewer: live spectrum, persistence, and waterfall display."
license = "MIT OR Apache-2.0"
repository = "https://github.com/skynavga/orion-sdr-view"
readme = "README.md"
keywords = ["sdr", "dsp", "radio", "spectrum", "waterfall"]
categories = ["visualization", "science", "multimedia"]
include = [
    "src/**/*",
    "assets/**/*",
    "tests/**/*",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
name = "orion_sdr_view"
path = "src/lib.rs"

[[bin]]
name = "orion-sdr-view"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.33"
num-complex = "0.4"
rustfft = "6"
orion-sdr = "0.0.27"
hound = "3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[features]
# Enable per-window BW/SNR trace output in the simulate_am_dsb_viewer test.
# Usage: cargo test --release --features bw-sim -- simulate_am_dsb_viewer --nocapture
bw-sim = []

[dev-dependencies]
tempfile = "3"
